# kaggle-ubiquant

./: .gitignore  pyproject.toml
kaggle_ubiquant/: dataset.py  model.py  train.py
kaggle_ubiquant/notebooks/: 20220217.ipynb  20220217.py  20220217_2_colab.ipynb  20220218.ipynb  20220218_colab.ipynb
scratch/: scratch.py
tests/: test_train.py
