[tool.poetry]
name = "kaggle-ubiquant"
version = "0.1.0"
description = ""
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kaggle_ubiquant"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
jupyter = "^1.0.0"
jupyterlab = "^3.2.9"
wandb = "^0.12.10"
sklearn = "^0.0"
plotly = "^5.6.0"
jupytext = "^1.13.7"
tqdm = "^4.62.3"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
